--- a/packages/en-US/package.json
+++ b/packages/en-US/package.json
@@ -2,12 +2,10 @@
   "name": "@electron-vite-docs/en",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vitepress",
     "build": "vitepress build",
     "serve": "vitepress serve"
-  },
-  "dependencies": {
-    "vue": "^3.2.37"
   }
 }
