--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@alexwei/commit-lint": "^1.0.0",
     "@types/node": "^22.14.1",
     "simple-git-hooks": "^2.9.0",
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.5.1"
   },
   "pnpm": {
     "peerDependencyRules": {
